--- a/src/web/templates/base.html
+++ b/src/web/templates/base.html
@@ -432,6 +432,7 @@
         <nav>
             <a href="/" class="brand">SeeClickFix Sentiment</a>
             <div class="nav-links">
+                <a href="/issues">Issues</a>
                 <a href="/employees">Employees</a>
                 <a href="/departments">Departments</a>
             </div>
